istio/browser-based-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: espresso-shop-reviews
spec:
  hosts:
    - espresso-shop-reviews-svc
  http:
  - match:
    - headers:
        User-Agent:
          regex: ".*Edge.*"
    route:
    - destination:
        host: espresso-shop-reviews-svc
        subset: v2
  - route:
    - destination:
        host: espresso-shop-reviews-svc
        subset: v1
