istio/delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: espresso-shop-reviews
spec:
  hosts:
  - espresso-shop-reviews-svc
  http:
  - fault:
      delay:
        percent: 100
        fixedDelay: 10s
    route:
    - destination:
        host: espresso-shop-reviews-svc
        subset: v1
