istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: espresso-shop-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: espresso-shop
spec:
  hosts:
  - "*"
  gateways:
  - espresso-shop-gateway
  http:
  - match:
    route:
    - destination:
        host: espresso-shop-web-svc
        port:
          number: 8090
